applications/linux-os/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: linux-os
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: lscr.io/linuxserver/webtop:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: 2Gi
              cpu: 1
            limits:
              memory: 2Gi
              # cpu: 100m
          volumeMounts:
          - mountPath: /config
            name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: linux-pvc
