applications/linux-os/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: os-application
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.xxxxx.people.aws.dev
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
  selector:
    app: myapp
