applications/linux-os/4-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: linux-os
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
  selector:
    app: myapp
